# sp-rtrace

./: .gitignore  BINARY_PROTOCOL  INSTALL  Makefile.am  README  README.modules  TEXT_PROTOCOL  TODO  _src  changelog  configure.ac  sp-rtrace.changes  sp-rtrace.spec
debian/: changelog  control  copyright  libsp-rtrace-dev.install  libsp-rtrace1-1.install  rules  sp-rtrace-visualize.install  sp-rtrace.dirs  sp-rtrace.install  substvars
devscripts/: README  file-test.cfg  gobject.cfg  module-template  rtrace-module-gen  sample-module.cfg  template.cfg
doc/: Makefile.am  doxygen.conf  rtrace-alloc-sizes.1  rtrace-allocmap-animate.1  rtrace-allocmap.1  rtrace-calltree.1  rtrace-from-function.1  rtrace-function-address.1  rtrace-graphs-function.1  rtrace-graphs-overview.1  rtrace-module-gen.1  rtrace-rename.1  rtrace-sort.1  rtrace-start.1  rtrace-stats.1  rtrace-timeline.1  sp-rtrace-allocmap.1  sp-rtrace-pagemap.1  sp-rtrace-postproc.1  sp-rtrace-resolve.1  sp-rtrace-timeline.1  sp-rtrace.1  sp_rtrace_context_try_create.3  sp_rtrace_print_context.3
scripts/: old-rtrace-timeline  rtrace-alloc-sizes  rtrace-allocmap  rtrace-allocmap-animate  rtrace-calltree  rtrace-from-function  rtrace-function-address  rtrace-graphs-function  rtrace-graphs-overview  rtrace-rename  rtrace-sort  rtrace-start  rtrace-stats  rtrace-timeline  sp-rtrace-function-address  timeline.py
src/: Makefile.am  debug_log.h  rtrace_common.h  test
src/common/: data_ops.h  debug_log.h  dlist.c  dlist.h  formatter.c  formatter.h  header.c  header.h  htable.c  htable.h  msg.c  msg.h  resolve_utils.c  resolve_utils.h  rtrace_data.c  rtrace_data.h  sp_rtrace_defs.h  sp_rtrace_proto.h  utils.c  utils.h
src/doc/: rtrace-timeline.doxygen
src/modules/: libunwind_support.c  libunwind_support.h  sp_context_impl.c  sp_context_impl.h  sp_rtrace_audit.c  sp_rtrace_file.c  sp_rtrace_gobject.c  sp_rtrace_main.c  sp_rtrace_main.h  sp_rtrace_memory.c  sp_rtrace_memshared.c  sp_rtrace_memtransfer.c  sp_rtrace_module.h  sp_rtrace_pagemap.c  sp_rtrace_qobject.c  sp_rtrace_shmaddr.c  sp_rtrace_shmposix.c  sp_rtrace_shmseg.c  sp_rtrace_shmsysv.c
src/pagemap/: README  pagemap.h  sp_rtrace_pagemap.c
src/rtrace/: listener.c  listener.h  rtrace_env.c  rtrace_env.h  sp_rtrace.c  sp_rtrace.h
src/rtrace-allocmap/: sp_rtrace_allocmap.c
src/rtrace-pagemap/: README  address_space.cpp  address_space.h  address_space_report.cpp  address_space_report.h  area_filter.h  call_event.h  call_trace.h  density_report.cpp  density_report.h  filter.cpp  filter.h  legend_report.cpp  legend_report.h  memory_area.cpp  memory_area.h  options.cpp  options.h  page_types.c  page_types.h  pagemap.cpp  pagemap.h  pages_report.cpp  pages_report.h  shared_pages_report.cpp  shared_pages_report.h  sp_rtrace_pagemap.c  sp_rtrace_pagemap.h  summary_report.cpp  summary_report.h  trace_data.cpp  trace_data.h
src/rtrace-postproc/: filter.c  filter.h  leaks_sort.c  leaks_sort.h  parse_binary.c  parse_binary.h  parse_text.c  parse_text.h  sp_rtrace_postproc.c  sp_rtrace_postproc.h  writer.c  writer.h
src/rtrace-resolve/: namecache.c  namecache.h  resolver.c  resolver.h  sarray.c  sarray.h  sp_rtrace_resolve.c  sp_rtrace_resolve.h
src/rtrace-timeline/: Makefile  activity_generator.cpp  activity_generator.h  event.h  filter.cpp  filter.h  filter_manager.cpp  filter_manager.h  formatter.h  histogram_generator.cpp  histogram_generator.h  i_tic_writer.h  lifetime_generator.cpp  lifetime_generator.h  options.cpp  options.h  parser.cpp  parser.h  plotter.cpp  plotter.h  processor.cpp  processor.h  report_data.h  report_generator.h  resource_registry.cpp  resource_registry.h  terminal.cpp  terminal.h  tic_writer.h  timeline.cpp  timeline.h  timestamp.h  totals_generator.cpp  totals_generator.h
tests/: Makefile.am  README
tests/lib/: config.h  rtrace_testsuite.h  sp-rtrace.exp
tests/sp-rtrace.core/: dlist.exp  dlist_test.c  htable.exp  htable_test.c  sarray.exp  sarray_test.c
tests/sp-rtrace.lib/: context.exp  context_fail.exp  context_fail_test.c  context_test.c  formatter.exp  formatter_test.c
tests/sp-rtrace.modules/: audit.exp  audit_test.c  file.exp  file_test.c  gobject.exp  gobject_test.c  memory.exp  memory_test.c  memtransfer.exp  memtransfer_test.c  shmposix.exp  shmposix_test.c  shmseg.exp  shmseg_test.c
tests/sp-rtrace.postproc/: alloc_context_test.c  alloc_test.c  context.exp  context.raw  context.txt  context.txt..  context.txt..lc  context.txt..lcr  context.txt.C0.  context.txt.C0.lc  context.txt.C1.  context.txt.C1.lc  context.txt.C1.lcr  context.txt.C2.  context.txt.C2.lc  context.txt.C2.lcr  context.txt.C3.  context.txt.C3.lc  context.txt.C3.lcr  context.txt.C4.  context.txt.C4.lc  context.txt.C4.lcr  filter.exp  generate_samples.sh  sample.raw  sample.txt  sample.txt.  sample.txt..  sample.txt..lc  sample.txt..lcr  sample.txt..r  sample.txt.lc  sample.txt.lc.  sample.txt.lc.lc  sample.txt.lc.lcr  sample.txt.lc.r  sample.txt.lcr  sample.txt.lcr.  sample.txt.lcr.lc  sample.txt.lcr.lcr  (+6 more)
tests/sp-rtrace.resolve/: debug.exp  demangle.exp  rdynamic.exp  resolve_test.c  resolve_test.cpp
tests/sp-rtrace.rtrace/: launcher.sh  rtrace.exp  trace_test.c
